--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ googleAnalytics = "UA-123-45"
 disqusShortname = "hJ BloG"
 
 [params]
-	subtitle = "hJ, BloG [github.com/mmjha](https://github.com/mmjha)"
+	subtitle = "hJ, BloG  [github.com/mmjha](https://github.com/mmjha)"
 
 	# Optional 64x64 avatar image.
 	avatar = "https://image.freepik.com/free-vector/young-man-head-with-beard-avatar-character_24877-36786.jpg"
@@ -36,19 +36,29 @@ url = "/"
 weight = 1
 
 [[menu.main]]
-name = "All posts"
-url = "/posts"
+name = "About"
+url = "/about"
 weight = 2
 
 [[menu.main]]
-name = "About"
-url = "/about"
+name = "Post"
+url = "/posts"
 weight = 3
+
+[[menu.main]]
+name = "Project"
+url = "/projects"
+weight = 4
+
+[[menu.main]]
+name = "PS"
+url = "/ps"
+weight = 5
 
 [[menu.main]]
 name = "Tags"
 url = "/tags"
-weight = 4
+weight = 6
 
 [[params.social]]
 name = "Github"
