--- a/config.toml
+++ b/config.toml
@@ -31,6 +31,9 @@ disqusShortname = "hJ BloG"
 	# customCSS = "css/custom.css"  # Custom CSS applied to default styles.
 	# customDarkCSS = "css/custom-dark.css"  # Custom styles applied to dark mode css.
 	# customJS = ["js/custom.js", "js/custom1.js"]  # Custom JS scripts.
+	
+	# 
+  	mainSections = ["posts", "projects", "ps"]
 
 # Nav.
 [[menu.main]]
@@ -75,3 +78,4 @@ url = "/index.xml"
 
 [taxonomies]
    tag = "tags"
+
